@@ -140,6 +140,13 @@ In addition to its builtin interface builder it can import XML forms generated
 by Glade by using libglade.
 <br><br></li>
 
+<li><a href="http://www.landsharklinux.com/">SnapperPerl</a>:
+an XML based application compiler and thin client. The compiler
+incorporates Glade XML, Perl scripts, and object extensions into a single XML
+file. The thin client provides a high level API and runs the application from
+the XML file.
+<BR><BR></li>
+
 <li><a href="http://www.lfix.co.uk/eiflib/index.html#eglade">eGlade</a>:
 Eiffel code generator.<BR><BR></li>
 
@@ -155,11 +162,13 @@ Ruby bindings for libglade</a>. See also the <a href = "http://ruby-lang.org">
 Ruby home page</a>.<BR><BR></li>
 
 
+<li><a href="http://anjuta.sourceforge.net/">Anjuta</a>:
+an Integrated Development Environment for GTK+ and GNOME.
+<BR><BR></li>
 
-<li><a href="http://gide.pn.org">gIDE</a>:
-GTK+ Integrated Development Environment, which will
-hopefully be integrated with Glade at some
-point in the future.<BR><BR></li>
+
+
+
 </ul>
 
 </font>							
