@@ -1,3 +1,7 @@
+2002-02-26  Damon Chaplin  <damon@ximian.com>
+
+	* links.html: added SnapperPerl.
+
 2002-02-22  Damon Chaplin  <damon@ximian.com>
 
 	* apps.html: added XMMS-Crossfade.
